# agent-framework-public

./: .dockerignore  .gitignore  AGENT_FRAMEWORK_PACKAGES_GUIDE.md  AZURE_AI_SAMPLES_UPDATE.md  HOSTED_AGENTS_DEMO_GUIDE.md  HOSTED_AGENTS_QUICK_REF.md  MODEL_COMPARISON_ANALYSIS.md  NL2SQL_README.md  PROFISEE-SK-TO-AF-MIGRATION-GUIDE.md  QUICK_REFERENCE.md  README.md  THOUGHTWORKS_SYNC_GUIDE.md  ZAFIN_SYNC_GUIDE.md  agent-framework-public.sln  agent_framework_inventory.md  convert_to_markdown.sh  cxrreportgensuccess-log.txt  export_partners.sh  list.txt  medimageparsesuccess-log.txt  requirements-test.txt  sync_to_onedrive.sh  sync_to_thoughtworks_private.sh  sync_to_zafin_private.sh  update_from_upstream.sh  update_maf_upstream.sh  verify_agent_framework.py
AQ-CODE/: AGUI_DEMOS.md  DOCKER_README.md  DOCUMENTATION_INDEX.md  MAF_AZURE_AI_FOUNDRY_WORKSHOP_DEMO_DRIVEN.md  MAF_VS_FOUNDRY_COMPARISON.md  README.md  WORKSHOP_AGENDA_EMAIL_SUMMARY_DEMO_DRIVEN.md  WORKSHOP_MINI_SUMMARY.md  add_dotenv_to_samples.py  deploy-to-azure.sh  requirements.txt  setup_azure_ai_samples.py  setup_azure_openai_samples.py  streamlit_azure_ai_demo.py  streamlit_azure_ai_demo_backup_20251025_1110.py  (+1 more)
AQ-CODE/demos/maf-copilotkit-demo/backend/: .env.example  pyproject.toml
AQ-CODE/demos/maf-copilotkit-demo/backend/src/: main.py
AQ-CODE/demos/maf-copilotkit-demo/backend/src/agents/: __init__.py  azure_search_agent.py  code_agent.py  file_agent.py  mcp_agent.py  search_agent.py  weather_agent.py
DBMS-ASSISTANT/UI/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
DBMS-ASSISTANT/UI/src-tauri/.cargo/: config.toml
DBMS-ASSISTANT/UI/src-tauri/icons/: icon.icns
DBMS-ASSISTANT/UI/src-tauri/src/: commands.rs  main.rs  python_bridge.rs
LLMOPS/: INDEX.md  (+3 more)
maf-upstream/python/samples/getting_started/agents/azure_ai_copilotkit/agent/: .env.example  .gitignore  pyproject.toml
maf-upstream/python/samples/getting_started/agents/azure_ai_copilotkit/agent/src/: main.py  weather_agent.py
(+931 files in other folders)
