[project]
name = "maf-copilotkit-demo"
version = "0.1.0"
description = "MAF + CopilotKit Demo - Modern UI for Azure AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "agent-framework-azure-ai>=1.0.0b251120",
    "agent-framework-ag-ui>=1.0.0b251117",
    "azure-identity>=1.15.0",
    "azure-ai-projects>=2.0.0b2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
]
