[project]
name = "azure-ai-weather-copilotkit"
version = "0.1.0"
description = "Azure AI Weather Agent for CopilotKit"
requires-python = ">=3.12"
dependencies = [
    "agent-framework[azure]>=0.1.0",
    "agent-framework-ag-ui>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
